2008-03-06  Federico Mena Quintero  <federico@novell.com>

	Merged from trunk:

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=505857 -
	GtkFileChooserDialog should set a default response button if the
	app doesn't set it.  Based on a patch by Chris Wang <chris.wang@sun.com>.

	* gtk/gtkfilechooserdialog.c (is_stock_accept_response_id): New
	function, refactor from where there was duplicated code.
	(gtk_file_chooser_dialog_map): Look at the buttons in our
	action_area.  If the response ID for a button is one of the stock
	ones, make it the default response button.

2008-03-04  Alberto Ruiz  <aruiz@gnome.org>
	* configure.in: Add --disable-cups option.
		(#513826, Alberto Ruiz)

2008-03-04  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* modules/printbackends/cups/gtkprintbackendcups.c:
	Honor cups user default options from ~/.cups/lpoptions
	(#469210, Stijn Hoop)

2008-03-03  Carlos Garnacho  <carlos@imendio.com>

	Merged from trunk:

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=417389 - Make the
	scrollwheel work in GtkPathBar.

	* gtk/gtkpathbar.h (struct _GtkPathBar): New field event_window.

	* gtk/gtkpathbar.c (gtk_path_bar_realize): New function.  Create
	an input-only window, event_window, which we'll use to capture
	scroll events.
	(gtk_path_bar_map): Show the event_window under the rest of the
	windows, so it will be a catch-all for unhandled events.

2008-03-03  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* gtk/gtkfilechooserbutton.c (G_DEFINE_TYPE_WITH_CODE): fixed a
	typo in the documentation of the GtkFileChooserButtons::file-set
	signal (see bug #353196).

2008-03-01  Richard Hult  <richard@imendio.com>

	Merged from trunk:

	* gdk/quartz/gdkprivate-quartz.h:
	* gdk/quartz/gdkwindow-quartz.c: Add debugging code to highlight a
	gdkwindow.

2008-02-29  Johan Dahlin  <johan@gnome.org>

	Merged from trunk:

	* gtk/gtkbuilder.c:
	* gtk/gtkbuilderparser.c:
	* gtk/gtkbuilderprivate.h: